--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-# Minimal deps; you can add more later
 streamlit>=1.39
 langchain>=0.3
 chromadb>=0.5
-sentence-transformers>=3.0
-faiss-cpu>=1.8
+sentence-transformers>=2.6,<3.2
 pydantic>=2
 python-dotenv>=1.0
 tqdm>=4.66
